// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Panel ifc testing collapse(setStateCallBack) 1`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-expanded uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    _expanded={true}
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing collapse(setStateCallBack) 2`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing expand(setStateCallBack) 1`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing expand(setStateCallBack) 2`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-expanded uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    _expanded={true}
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing isExpandable() return false 1`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-common-disabled uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing isExpandable() return true 1`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing isExpandable() return true when alwaysExpanded is true and disabled is false 1`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing isExpanded() return false 1`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing isExpanded() return true 1`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-expanded uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    _expanded={true}
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing setExpandedValue(false, setStateCallBack) 1`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing setExpandedValue(true, setStateCallBack) 1`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing toggle(setStateCallBack) 1`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing toggle(setStateCallBack) 2`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-expanded uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    _expanded={true}
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ifc testing toggle(setStateCallBack) 3`] = `
<div
  className="color-schema-blue-rich color-schema-primary uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="panel0"
  name="Panel"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="primary"
    _onClick={[Function]}
    content="Large team"
    iconAlign={null}
    id="panel0-header"
    key="panel0-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="This is content in panel"
    id="panel0-body"
    key="panel0-body"
  />
</div>
`;
